--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/jacobmarshall/angular-marshall.storage.git"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-uglify": "^1.2.0"
   }
 }
